--- a/src/css/admin/edit-reservation.css
+++ b/src/css/admin/edit-reservation.css
@@ -19,50 +19,50 @@
 #reservationnotes.postbox table {
   width: 100%;
   border-collapse: collapse; }
-  #reservationinfo.postbox table tr:last-of-type td, #reservationinfo.postbox table tr:last-of-type th,
+  #reservationinfo.postbox table tr:last-of-type td,
+  #reservationinfo.postbox table tr:last-of-type th,
   #reservationactions.postbox table tr:last-of-type td,
   #reservationactions.postbox table tr:last-of-type th,
-  #reservationnotes.postbox table tr:last-of-type td,
-  #reservationnotes.postbox table tr:last-of-type th {
+  #reservationnotes.postbox table tr:last-of-type td, #reservationnotes.postbox table tr:last-of-type th {
     border-bottom: 0; }
   #reservationinfo.postbox table th[scope="row"],
   #reservationactions.postbox table th[scope="row"],
   #reservationnotes.postbox table th[scope="row"] {
     text-align: left; }
-  #reservationinfo.postbox table td, #reservationinfo.postbox table th,
+  #reservationinfo.postbox table td,
+  #reservationinfo.postbox table th,
   #reservationactions.postbox table td,
   #reservationactions.postbox table th,
-  #reservationnotes.postbox table td,
-  #reservationnotes.postbox table th {
+  #reservationnotes.postbox table td, #reservationnotes.postbox table th {
     vertical-align: top;
     padding: 10px;
     border-bottom: 1px solid #e8e8e8;
     border-right: 1px solid #e8e8e8; }
-    #reservationinfo.postbox table td:last-child, #reservationinfo.postbox table th:last-child,
+    #reservationinfo.postbox table td:last-child,
+    #reservationinfo.postbox table th:last-child,
     #reservationactions.postbox table td:last-child,
     #reservationactions.postbox table th:last-child,
-    #reservationnotes.postbox table td:last-child,
-    #reservationnotes.postbox table th:last-child {
+    #reservationnotes.postbox table td:last-child, #reservationnotes.postbox table th:last-child {
       border-right: 0; }
-    #reservationinfo.postbox table td *, #reservationinfo.postbox table th *,
+    #reservationinfo.postbox table td *,
+    #reservationinfo.postbox table th *,
     #reservationactions.postbox table td *,
     #reservationactions.postbox table th *,
-    #reservationnotes.postbox table td *,
-    #reservationnotes.postbox table th * {
+    #reservationnotes.postbox table td *, #reservationnotes.postbox table th * {
       margin: 0;
       padding: 0; }
-    #reservationinfo.postbox table td p + button, #reservationinfo.postbox table th p + button,
+    #reservationinfo.postbox table td p + button,
+    #reservationinfo.postbox table th p + button,
     #reservationactions.postbox table td p + button,
     #reservationactions.postbox table th p + button,
-    #reservationnotes.postbox table td p + button,
-    #reservationnotes.postbox table th p + button {
+    #reservationnotes.postbox table td p + button, #reservationnotes.postbox table th p + button {
       margin-top: 1em;
       padding: 0 0.5em; }
-      #reservationinfo.postbox table td p + button + em, #reservationinfo.postbox table th p + button + em,
+      #reservationinfo.postbox table td p + button + em,
+      #reservationinfo.postbox table th p + button + em,
       #reservationactions.postbox table td p + button + em,
       #reservationactions.postbox table th p + button + em,
-      #reservationnotes.postbox table td p + button + em,
-      #reservationnotes.postbox table th p + button + em {
+      #reservationnotes.postbox table td p + button + em, #reservationnotes.postbox table th p + button + em {
         display: block;
         color: #808080;
         margin-top: 0.5em; }
