--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             window.location.href.indexOf('localhost') === -1 &&
             window.location.href.indexOf('127.0.0.1') === -1
         ) {
-            window.location = 'http://www.wprsrv.org';
+            window.location.href = 'http://www.wprsrv.org' + window.location.pathname;
         }
     </script>
 
