--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,7 @@
             window.location.href.indexOf('localhost') === -1 &&
             window.location.href.indexOf('127.0.0.1') === -1
         ) {
-            window.location.href = 'http://www.wprsrv.org' +
-                (window.location.pathname === '/wprsrv') ?
-                '' :
-                window.location.pathname;
+            window.location.href = 'http://www.wprsrv.org'
         }
     </script>
 
