--- a/src/sass/admin/edit-reservable.scss
+++ b/src/sass/admin/edit-reservable.scss
@@ -135,6 +135,7 @@
 
     table {
         border-collapse: collapse;
+        table-layout: fixed;
         width: 100%;
         display: none;
 
@@ -175,14 +176,7 @@
 
         td.single-day {
             width: 14.285%;
-
-            &.start-reservation_accepted {
-                border-left: 3px solid #9c0;
-            }
-
-            &.start-reservation_pending {
-                border-left: 3px solid #c90;
-            }
+            max-width: 14.285%;
         }
 
         a.prev-month, a.next-month {
@@ -208,33 +202,45 @@
             width: 30px;
             height: 30px;
             line-height: 30px;
-            display: inline-block;
+            margin-bottom: 5px;
+            display: block;
             float: left;
             color: #666;
-
-            &.reservation_pending {
-                font-weight: bold;
-                margin: 0 10px 0 0;
-                background-color: #c90;
-                color: #750;
-            }
-
-            &.reservation_accepted {
-                font-weight: bold;
-                margin: 0 10px 0 0;
-                background-color: #9c0;
-                color: #fff;
-            }
         }
 
-        span.reservation {
+        .reservation-box {
+            clear: left;
+            margin: 5px 0;
+            background-color: white;
             font-size: 90%;
-            line-height: 18px;
-            display: inline-block;
-            margin-top: 5px;
+            display: block;
+            max-width: 100%;
+            padding: 5px 7px;
+            box-sizing: border-box;
+            border: 1px solid #eee;
+            border-left-width: 3px;
+            border-left-color: currentColor;
+            line-height: 1.2;
 
             a {
                 text-decoration: none;
+                color: inherit;
+                display: block;
+                max-width: 100%;
+                overflow: hidden;
+                text-overflow: '...';
+            }
+
+            &.reservation_pending {
+                color: #b70;
+            }
+
+            &.reservation_accepted {
+                color: #7a0;
+            }
+
+            &.reservation_declined {
+                color: #920;
             }
         }
     }
