--- a/src/sass/admin/edit-reservable.scss
+++ b/src/sass/admin/edit-reservable.scss
@@ -201,8 +201,8 @@
             text-align: center;
             width: 30px;
             height: 30px;
-            line-height: 30px;
             margin-bottom: 5px;
+            line-height: 30px;
             display: block;
             float: left;
             color: #666;
@@ -215,20 +215,27 @@
             font-size: 90%;
             display: block;
             max-width: 100%;
-            padding: 5px 7px;
             box-sizing: border-box;
             border: 1px solid #eee;
-            border-left-width: 3px;
-            border-left-color: currentColor;
             line-height: 1.2;
 
             a {
+                padding: 6px 8px;
                 text-decoration: none;
                 color: inherit;
                 display: block;
                 max-width: 100%;
                 overflow: hidden;
                 text-overflow: '...';
+
+                &:hover {
+                    background-color: #eee;
+                }
+            }
+
+            &.start {
+                border-left-width: 3px;
+                border-left-color: currentColor;
             }
 
             &.reservation_pending {
